--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="https://medium.com/p/2e9f822863b1" target="_blank">
-										<h2>An Overview of People with Disabilites in Mexico</h2>
+										<h2>An Overview of People with Disabilities in Mexico</h2>
 										<div class="content">
 											<p>Utilized Python and Tableau to examine the population with disabilities in Mexico, analyzing distribution, activity engagement, and educational accessibility to identify challenges and patterns within the demographic.</p>
 										</div>
